--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Rolling Ball</title>
-  <link rel="stylesheet" href="candyclicker.css">
+  <link rel="stylesheet" href="paper.css">
 </head>
 <body>
   <iframe src="https://scratch.mit.edu/projects/601801234/embed"
